# Robotic_Arm

./: .gitignore  README.md  frames_2026-04-16_15.54.54.gv  log.txt
.trae/documents/: Fix Launch Files for Gluon MoveIt Config.md  Implement Move Group Demo Node.md
src/ros_gluon-master/: .gitignore
src/ros_gluon-master/.trae/documents/: Migrate Gluon Robot Code to ROS 2 Humble.md
src/ros_gluon-master/gluon/: CMakeLists.txt  package.xml
src/ros_gluon-master/gluon/launch/: bringup.launch.py  display.launch.py  start_node.launch.py
src/ros_gluon-master/gluon/src/: gluonControl.cpp
src/ros_gluon-master/gluon/urdf/: gluon.urdf  gluon_ros2.urdf
src/ros_gluon-master/gluon_control/: CMakeLists.txt  gluon_control_plugins.xml  package.xml
src/ros_gluon-master/gluon_control/config/: gluon_controllers_ros2.yaml
src/ros_gluon-master/gluon_control/include/gluon_control/: gluon_hw_interface.h
src/ros_gluon-master/gluon_control/src/: gluon_hw_interface.cpp
src/ros_gluon-master/gluon_moveit_config/: CMakeLists.txt  package.xml
src/ros_gluon-master/gluon_moveit_config/config/: gluon.srdf  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/ros_gluon-master/gluon_moveit_config/launch/: demo.launch.py  move_group.launch.py  move_group_demo.launch.py  moveit.rviz  moveit_rviz.launch.py  target_approach.launch.py
src/ros_gluon-master/gluon_moveit_config/src/: move_group_demo.cpp  target_approach_node.cpp
src/ros_gluon-master/gluon_vision/: package.xml  setup.cfg  setup.py
src/ros_gluon-master/gluon_vision/gluon_vision/: yolo_detection_node.py
src/ros_gluon-master/gluon_vision/launch/: yolo_detector.launch.py
